--- a/angularapp/src/index.html
+++ b/angularapp/src/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
     <head>
         <title>Evaluaciones Psicológicas</title>
+        <link rel="icon" type="image/x-icon" href="assets/images/logo/logo-app.png"/>
         <meta charset="utf-8" />
         <meta
             name="description"
@@ -36,7 +37,7 @@
 
     <body>
         <fuse-splash-screen>
-            <img src="assets/images/logo/logo.svg" alt="Fuse logo" />
+            <img src="assets/images/logo/logo-app.png" alt="Fuse logo" />
             <div class="spinner">
                 <div class="bounce1"></div>
                 <div class="bounce2"></div>
